--- a/web/index.html
+++ b/web/index.html
@@ -27,34 +27,32 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span> 
-                        <span class="icon-bar"></span> 
                     </button>
-                    <a class="navbar-brand" href="#">Brady Intelligent Services</a>
+                    <a class="navbar-brand" href="#"><img src="images/bradyBlue.jpg" alt="Brady"></a>
                 </div>
+                <br>
                 <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
+                    <ul class="nav navbar-nav">                        
                         <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>                         
+                        <li><a href="#">Link 2</a></li> 
+                        <li><a href="#">Link 3</a></li> 
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">                      
+                    <ul class="nav navbar-nav navbar-right">
                         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="container">
-            <br>
+        <div class="container-fluid">
+
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
+                <br>
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                     <li data-target="#myCarousel" data-slide-to="1"></li>
                     <li data-target="#myCarousel" data-slide-to="2"></li>                    
                 </ol>
-
-                <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
                         <img class="img-responsive center-block" src="images/greensboro.jpg" alt="Brady1">
@@ -62,23 +60,19 @@
                             <p>Greensboro Skyline</p>
                         </div>
                     </div>
-
                     <div class="item">
                         <img class="img-responsive center-block" src="images/raleigh.jpg" alt="Brady2">
                         <div class="carousel-caption">                            
                             <p>Raleigh Skyline</p>
                         </div>
                     </div>
-
                     <div class="item">
                         <img class="img-responsive center-block" src="images/charlotte.jpg" alt="Brady3">
                         <div class="carousel-caption">                           
                             <p>Charlotte Skyline</p>
                         </div>
                     </div>
-
                 </div>
-
 
                 <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -88,44 +82,66 @@
                     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
+                <br>
             </div>
-
+        </div>
+        <div class="container">
             <br>            
             <div class="row">
                 <div class="col-sm-6 col-md-4 col-lg-4">                
-                    <fieldset class="log">
-                        <legend class="log1"> Weather</legend>
-                        <a href="http://www.accuweather.com/en/us/charlotte-nc/28202/weather-forecast/349818" class="aw-widget-legal">
-                        </a><div id="awcc1426521081394" class="aw-widget-current"  data-locationkey="349818" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1426521081394"></div><script type="text/javascript" src="http://oap.accuweather.com/launch.js"></script>
+                    <fieldset>
+                        <legend> Weather</legend>
+                        <a href="undefined" class="aw-widget-legal">
+                        </a><div id="awcc1437072856452" class="aw-widget-current"  data-locationkey="329822" data-unit="c" data-language="en-us" data-useip="true" data-uid="awcc1437072856452"></div><script type="text/javascript" src="http://oap.accuweather.com/launch.js"></script>
                     </fieldset>
                 </div>
 
                 <div class="col-sm-6 col-md-4 col-lg-4">
-                    <fieldset class="log">
-                        <legend class="log1"> Video </legend>
-                        <object id="video" data="https://www.youtube.com/embed/i0g38pRuB70?list=PL-YUlD08fjxj_0v-8b_F4Uj-UgfW-50kT"></object>
+                    <fieldset>
+                        <legend> Video </legend>
+                        <object id="video" data="https://www.youtube.com/embed/i0g38pRuB70?list=PL-YUlD08fjxj_0v-8b_F4Uj-UgfW-50kT" class="widget"></object>
                     </fieldset>
                 </div>           
 
                 <div class="clearfix visible-sm-block"></div>
                 <div class="col-sm-6 col-md-4 col-lg-4">
-                    <fieldset class="log">
-                        <legend class="log1"> Blog </legend>
+                    <fieldset>
+                        <legend> Blog </legend>
                         <p>We can have the blogs here.</p>
-
                     </fieldset>
-                </div>
+                </div>    
             </div>
+            <br>
+        </div> 
 
-            <hr>
-
-            <div class="row">
-                <div class="col-sm-12">
-                    <footer>
-                        <p>Copyright © Brady Trane Services Inc.</p>
-                    </footer>
+        <div class="container-fluid brady-color" id="wrap">
+            <footer>
+                <br>
+                <div class="footer-above">                   
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-6 col-md-6 col-lg-6">     
+                                <p>Link1</p>
+                                <p>Link2</p>                      
+                            </div>
+                            <div class="col-sm-6 col-md-6 col-lg-6">
+                                <p>Link4</p>
+                                <p>Link5</p>
+                            </div>           
+                        </div>
+                    </div>   
                 </div>
-            </div>
+                <br>
+                <div class="container">
+                    <div class="footer-below">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <p>Copyright © Brady Trane Services Inc.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
     </body>
 </html>                                		
