carousel problem resolved, new favicon

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse ">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -108,8 +108,8 @@
 
                 <div class="col-sm-6 col-md-4 col-lg-4">
                     <fieldset>
-                        <legend> Video </legend>
-                        <object id="video" data="https://www.youtube.com/embed/i0g38pRuB70?list=PL-YUlD08fjxj_0v-8b_F4Uj-UgfW-50kT" class="video-widget"></object>
+                        <legend> Updates </legend>
+                        <p>Updates</p>
                     </fieldset>
                 </div>           
 
@@ -124,7 +124,7 @@
             <br>
         </div> 
 
-        <div class="container-fluid brady-color" id="wrap">
+        <div class="container-fluid foot" id="wrap">
             <footer>
                 <br>
                 <div class="footer-above">                   
