footer login, energy fact of the day

--- a/web/blog-post.html
+++ b/web/blog-post.html
@@ -18,7 +18,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/jquery.js"></script>
         <link href="styles/scrolling-nav.css" rel="stylesheet">
         <link rel="stylesheet" href="styles/main.css" type="text/css"/>
 
@@ -39,67 +38,21 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#page-top"><img src="images/logoBlueBack.jpg" alt="Brady"></a>
+                    <a class="navbar-brand" href="/"><img src="images/logoBlueBack.jpg" alt="Brady"></a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
                     <ul class="nav navbar-nav ">
                         <li class="hidden">
                             <a class="page-scroll" href="#page-top"></a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="#about">About</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="#blog">Blog</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                    <!--
-                     <ul class="nav pull-right">
-                         <li class="dropdown">
-                             <a class="dropdown-toggle" href="#" data-toggle="dropdown"><button class="btn btn-default" ><span class="glyphicon glyphicon-log-in"> Login <strong class="caret"></strong></button></a>
-                             <div class="dropdown-menu" style="padding: 15px; padding-bottom: 10px;">
-                                 <form method="post" action="login" accept-charset="UTF-8">
-                                     <input style="margin-bottom: 15px;" type="text" placeholder="Username" id="username" name="username">
-                                     <input style="margin-bottom: 15px;" type="password" placeholder="Password" id="password" name="password">
-                                     <input style="float: left; margin-right: 10px;" type="checkbox" name="remember-me" id="remember-me" value="1">
-                                     <label class="string optional" for="user_remember_me"> Remember me</label>
-                                     <input class="btn btn-default btn-block" type="submit" id="sign-in" value="Sign In">
-                                 </form>
-                             </div>
-                         </li>
-                     </ul>
-                    -->
-                    <!--
-                    <form class="navbar-form navbar-right" role="form">
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="username" placeholder="Username">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" name="password" placeholder="Password">
-                            </div>
-                            <a class="page-scroll" href="#about"><button class="btn btn-default"><span class="glyphicon glyphicon-log-in"> Login</button></a>
-                            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-log-in"> <a class="page-scroll" href="#about">Login</a></button>
-                            <br>
-                            <div class="checkbox">
-                                <label class="remember-me"><input type="checkbox" class="form-control" name="remember"> Remember me</label>
-                            </div>
-                     </form>
-                    -->
-
-                    <form class="navbar-form navbar-right" role="form">
-                        <a class="page-scroll" href="#about"><button class="btn btn-default"><span class="glyphicon glyphicon-log-in"> Login</button></a>
-                    </form>              
-
+                        </li> 
+                    </ul>      
                 </div>
             </div>
-        </nav>
+        </nav> 
 
-        <!-- Blog Section -->
-        <section id="blog" class="blog-section">
+        <!-- Blog Section-->
+        <section id="blog" class="blog-post">
             <div class="container">
                 <div class="row">
                     <header class="intro-header" style="background-image: url('img/post-bg.jpg')">
@@ -145,7 +98,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus</p>
 
                                     <a href="#">
-                                        <img class="img-responsive" src="img/post-sample-image.jpg" alt="">
+                                        <img class="img-responsive" src="images/greensboroBW.jpg" alt="">
                                     </a>
                                     <span class="caption text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum</span>
 
@@ -153,7 +106,7 @@
 
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus</p>
 
-                                    
+
                                 </div>
                             </div>
                         </div>
@@ -174,6 +127,12 @@
             -->
         </section>
 
+
+        <!-- Drop down java script -->
+        <script src="js/dropdown.js"></script>
+        <!-- Scrolling Nav JavaScript -->
+        <script src="js/jquery.easing.min.js"></script>
+        <script src="js/scrolling-nav.js"></script>      
 
     </body> 
 </html>                                	
