forgot password page added

--- a/web/index.html
+++ b/web/index.html
@@ -272,8 +272,8 @@
                                     </div>
                                 </form>
                             </div>
-                            <div class="panel-footer">Not Registered? <a class="page-scroll" href="/signup">Register here</a>
-                            </div>
+                            <div class="panel-footer">Not Registered? <a class="page-scroll" href="/signup">Register here</a> </div>                          
+                            <div class="panel-footer"><a class="page-scroll" href="forgot-pwd.html">Forgot Password ?</a> </div>                          
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-4"></div>
