--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#page-top"><img src="images/logoBlueBack.jpg" alt="Brady"></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logoBlueBack.jpg" alt="Brady"></a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -93,7 +93,7 @@
 
                     <!-- Login button -->    
                     <div class="navbar-form navbar-right">
-                        <a class="page-scroll" href="#login"><button class="btn btn-default"><span class="glyphicon glyphicon-log-in"> Login</button></a>
+                        <a class="page-scroll" href="login.html"><button class="btn btn-default"><span class="glyphicon glyphicon-log-in"> Login</button></a>
                     </div>
                 </div>
             </div>
@@ -218,68 +218,7 @@
             -->
         </section>
 
-        <!-- Login Section -->
-
-        <section id="login" class="login-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-sm-4"></div>
-
-                    <div class="col-lg-4 col-sm-4">
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <div class="panel panel-default">
-
-                            <div class="panel-heading"> <strong class="">Login</strong>
-
-                            </div>
-                            <div class="panel-body">
-                                <form class="form-horizontal" role="form" method="post" action="/index">
-                                    <div class="form-group error-message">
-                                        <% if(typeof(errorMessage) !== 'undefined') {%>
-                                        <span><%= errorMessage %></span>
-                                        <% } %>
-                                    </div>                                    
-                                    <div class="form-group">                                        
-                                        <label for="username" class="col-sm-3 control-label">Username</label>
-                                        <div class="col-sm-9">                                            
-                                            <input type="text" class="form-control" name="username" id="username" placeholder="Username" required>                                            
-                                        </div>
-                                    </div>
-                                    <div class="form-group">                                        
-                                        <label for="password" class="col-sm-3 control-label">Password</label>
-                                        <div class="col-sm-9">                                            
-                                            <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>                                            
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="col-sm-offset-3 col-sm-9">
-                                            <div class="checkbox">
-                                                <label class="">
-                                                    <input type="checkbox" class="">Remember me</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group last">
-                                        <div class="col-sm-offset-3 col-sm-9">				
-                                            <input class="btn btn-success btn-sm" type="submit" value="Sign In">
-                                            <!--<button type="submit" class="btn btn-success btn-sm">Sign in</button>-->
-                                            <button type="reset" class="btn btn-default btn-sm">Reset</button>                                            
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="panel-footer">Not Registered? <a class="page-scroll" href="/signup">Register here</a> </div>                          
-                            <div class="panel-footer"><a class="page-scroll" href="forgot-pwd.html">Forgot Password ?</a> </div>                          
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-4"></div>
-                </div>
-            </div>
-        </section>      
+       
 
         <!-- Contact Section -->
         <section id="contact" class="contact-section">
