added admin and email-pwd page

--- a/web/email-pwd.html
+++ b/web/email-pwd.html
@@ -52,7 +52,7 @@
         </nav> 
 
         <!-- Email Password Section-->
-        <section id="blog" class="email-pwd">
+        <section id="email" class="email-pwd">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-sm-4">
