--- a/web/login.html
+++ b/web/login.html
@@ -104,9 +104,8 @@
                                         </div>
                                     </div>
                                 </form>
-                            </div>
-                            <div class="panel-footer">Not Registered? <a class="page-scroll" href="/signup">Register here</a> </div>                          
-                            <div class="panel-footer"><a class="page-scroll" href="forgot-pwd.html">Forgot Password ?</a> </div>                          
+                            </div>                            
+                            <div class="panel-footer"><a class="page-scroll" href="email-pwd.html">Forgot Password ?</a> </div>                          
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-4"></div>
