--- a/web/admin.html
+++ b/web/admin.html
@@ -38,7 +38,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/"><img src="images/logoBlueBack.jpg" alt="Brady"></a>
+                    <a class="navbar-brand" href="/"><img src="images/logo.jpg" alt="Brady"></a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -47,10 +47,10 @@
                             <a class="page-scroll" href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#user">Add User</a>
+                            <a class="page-scroll" href="#user"><span class="scroll-elements">Add User</span></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#project">Add Project</a>
+                            <a class="page-scroll" href="#project"><span class="scroll-elements">Add Project</span></a>
                         </li>                        
                     </ul>
 
