--- a/web/index.html
+++ b/web/index.html
@@ -38,22 +38,22 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logoBlueBack.jpg" alt="Brady"></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="Brady"></a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav navbar-nav ">
+                    <ul class="nav navbar-nav">
                         <li class="hidden">
                             <a class="page-scroll" href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#about">About</a>
+                            <a class="page-scroll" href="#about"><span class="scroll-elements">About</span></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#blog">Blog</a>
+                            <a class="page-scroll" href="#blog"><span class="scroll-elements">Blog</span></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#contact">Contact</a>
+                            <a class="page-scroll" href="#contact"><span class="scroll-elements">Contact</span></a>
                         </li>
                     </ul>
                     <!-- Drop down login button -->
