--- a/web/home.html
+++ b/web/home.html
@@ -7,17 +7,18 @@
 -->
 <html lang="en">
     <head>
-        <title>BIS Portal</title>
+        <title><%= title %></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Custom CSS -->
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+        <!-- Custom CSS --> 
         <link href="styles/scrolling-nav.css" rel="stylesheet">
         <link rel="stylesheet" href="styles/main.css" type="text/css"/>
 
@@ -38,7 +39,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="Brady"></a>
+                    <a class="navbar-brand" href="/"><img src="images/logo.jpg" alt="Brady"></a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -48,7 +49,8 @@
                         </li>
                     </ul>                    
                     <!-- Logout button -->
-                    <div class="navbar-form navbar-right">                        
+                    <div class="navbar-form navbar-right">      
+                        <a href="/changePwd"><span class="color-white">Change Password</span></a>&nbsp;&nbsp;&nbsp;&nbsp;                  
                         <a href="/signout" class="btn btn-default" title="sign out">Logout <span class="glyphicon glyphicon-log-out"></span></a>  
                     </div>              
 
@@ -63,12 +65,18 @@
                     <div class="col-lg-12">
                         Welcome <strong><%= user.firstname + " " + user.lastname %></strong> 
                         <br>
-                        <br>
-                        <a href="/project"><p>Project 1</p>
-                            <p>Project 2</p>
-                            <p>Project 3</p>
-                            <p>Project 4</p></a>
+                        <br>                       
+                        <% for(var i=0; i<userProjectList.length; i++) { %>
+
+                            <a href='project/<%= userProjectList[i].projecturl %>'>
+                                <%= userProjectList[i].projectname %>
+                            </a>                              
+                            <% } %>                      
+
+                            <br><br>
+                            <a href='/<%= adminLink %>'><%= adminLinkText %></a>
                     </div>
+
                 </div>
         </section>        
 
@@ -79,6 +87,6 @@
         <script src="js/scrolling-nav.js"></script>
         <script src="js/read-facts.js"></script>
 
-       
+
     </body> 
 </html>                                	
